Fix Thunar flickering and transparency - remove CSS opacity, update transparency to 85%/80%, fix class case

--- a/config/gtk-3.0/gtk.css
+++ b/config/gtk-3.0/gtk.css
@@ -7,7 +7,6 @@
 window.thunar {
     background-color: #0a0b10;
     color: #c0caf5;
-    opacity: 0.9;
 }
 
 /* Thunar main content area */
